package com.example.secondstoryproject.models;

/// interface for models that have an id
public interface Idable {

    String getId();

    void setId(String id);
}